# tofncan

./: README.md
firmware/: Cargo.toml  Embed.toml  GD32E10x_Series.yaml  memory.x
firmware/.cargo/: config
firmware/src/: main.rs
pcb/: .gitignore
pcb/3d_models/: vl53l1x.step
pcb/kicad_project/: fp-lib-table  sym-lib-table  tofncan.kicad_pcb  tofncan.kicad_pro  tofncan.kicad_sch
pcb/kicad_project/jlcpcb/: project.db
pcb/lib_fp.pretty/: CAN_address_Open_RoundedPad1.0x1.5mm.kicad_mod  TOF200C-VL53L0X.kicad_mod  VEML7700-SIDE.kicad_mod  VEML7700-TOP.kicad_mod
pcb/lib_sch/: tofncan.kicad_sym
pcb/outputs/bom/: ibom.html
pcb/outputs/fabrication/: tofncan-B_Cu.gbl  tofncan-B_Mask.gbs  tofncan-B_Paste.gbp  tofncan-B_Silkscreen.gbo  tofncan-Edge_Cuts.gm1  tofncan-F_Cu.gtl  tofncan-F_Mask.gts  tofncan-F_Paste.gtp  tofncan-F_Silkscreen.gto  tofncan-In1_Cu.g2  tofncan-In2_Cu.g3  tofncan-NPTH-drl_map.gbr  tofncan-NPTH.drl  tofncan-PTH-drl_map.gbr  tofncan-PTH.drl
