[package]
name = "tofncan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
nb = "1.0.0"
panic-reset = "0.1.1"
cortex-m-semihosting = "0.5.0"
rtt-target = "0.4.0"
veml7700 = "0.1.7"
vl53l1 = { version = "0.1.2", features = ["ufmt"] }
shared-bus = { version = "0.3.0", features = ["cortex-m"] }
bxcan = "0.7.0"

[dependencies.sht3x]
git = "https://github.com/miek/sht3x-rs"
branch = "master"

[dependencies.gd32e103-hal]
git = "https://github.com/gd32-rust/gd32e103-hal"
branch = "main"
features = ["rt"]

[profile.dev]
codegen-units = 1
debug = 1
lto = true
opt-level = "z"
